# dax-ai-oracle

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  cli.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  scheduled.yml
daxai/: cli.py
daxai/configs/: cleanup.yaml
daxai/dashboard/: __init__.py  app.py
daxai/models/: __init__.py  autoformer.py  finrl_ppo.py  lstm.py  patchtst.py  tabnet.py  tft.py
daxai/prefect/: backtest.py  cleanup.py  flows.py  train_and_evaluate.py
docs/: ARCHITECTURE.md
python/: __init__.py  cli.py
python/configs/: cleanup.yaml  data.yaml  optuna.yaml
python/dashboard/: app.py
python/features/: labels.py  pipelines.py
python/models/: __init__.py  autoformer.py  catboost.py  common.py  informer.py  lightgbm.py  n_linear.py  prophet.py  tft.py  timesnet.py
python/prefect/: backtest.py  cleanup.py  flows.py  train_and_evaluate.py
python/utils/: yf_compat.py
scripts/: remove_macos_artifacts.sh  setup.sh
src/: App.tsx
src/components/: DashboardNav.tsx
src/pages/: Equity.tsx  Explain.tsx  Index.tsx  Leaderboard.tsx  Live.tsx
tests/: conftest.py  test_backtest.py  test_checkpoints.py  test_cleanup.py  test_cli.py  test_config.py  test_dashboard.py  test_feature_build.py  test_features.py  test_ingest.py  test_prophet_missing.py  test_train_and_evaluate.py  test_yf_integration.py  test_yf_signature.py  test_yfinance_compat.py
tests/fixtures/: yf_daily.csv  yf_minute.csv
